[package]
name = "hdf5-src"
version = "0.7.1"  # !V
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5"]
license-file = "ext/hdf5/COPYING"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5-rust"
homepage = "https://github.com/aldanor/hdf5-rust"
description = "Build script for compiling HDF5 C library from source."
edition = "2018"
links = "hdf5src"

[features]
hl = []
zlib = ["libz-sys"]
deprecated = []
threadsafe = []

[dependencies]
libz-sys = { version = "1.0.25", features = ["static"], optional = true }

[build-dependencies]
cmake = "0.1.44"
